Fix scrollbar issue in navbar search

--- a/axelor-front/src/layout/nav-drawer/search.module.scss
+++ b/axelor-front/src/layout/nav-drawer/search.module.scss
@@ -7,3 +7,7 @@
   line-height: 0.8rem;
   cursor: pointer;
 }
+
+.hide {
+  display: none;
+}
